--- a/hello-spring-cloud-service-admin/pom.xml
+++ b/hello-spring-cloud-service-admin/pom.xml
@@ -8,10 +8,10 @@
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../hello-spring-cloud-dependencies/pom.xml</relativePath>
     </parent>
-    <artifactId>hello-spring-cloud-eureka</artifactId>
+    <artifactId>hello-spring-cloud-service-admin</artifactId>
     <packaging>jar</packaging>
 
-    <name>hello-spring-cloud-eureka</name>
+    <name>hello-spring-cloud-service-admin</name>
     <url>http://www.funtl.com</url>
     <inceptionYear>2019-Now</inceptionYear>
 
@@ -24,7 +24,11 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
@@ -50,7 +54,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.funtl.hello.spring.cloud.eureka.EurekaApplication</mainClass>
+                    <mainClass>com.funtl.hello.spring.cloud.service.admin.ServiceAdminApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
